# robofest_packages

./: README.md  state_data_task_4.csv
install/: local_setup.sh  setup.sh
install/integrated_drone_mapping/share/integrated_drone_mapping/: local_setup.dsv  package.ps1  package.sh
install/mapping/lib/mapping/: corridor_gen_correct  gcopter_trajectory_planner  integrated_drone_mapping_node
install/mapping/share/ament_index/resource_index/package_run_dependencies/: mapping
install/mapping/share/ament_index/resource_index/parent_prefix_path/: mapping
install/mapping/share/mapping/: package.dsv  package.sh  package.xml
install/mine_mapping/include/mine_mapping/: map_generator.hpp
install/mine_mapping/lib/mine_mapping/: mine_mapper
install/mine_mapping/share/mine_mapping/: local_setup.dsv  local_setup.sh  package.bash  package.sh  package.zsh
install/mine_mapping/share/mine_mapping/cmake/: mine_mappingConfig.cmake
install/object_tracker/share/object_tracker/: package.sh
install/object_tracking_cpp/lib/object_tracking_cpp/: yaw_control
install/object_tracking_cpp/share/object_tracking_cpp/: package.bash  package.sh  package.xml  package.zsh
install/px4_msgs/share/px4_msgs/: package.sh
install/swarm_control/include/swarm_control/swarm_control/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/swarm_control/include/swarm_control/swarm_control/msg/detail/: mother_state__functions.h  mother_state__rosidl_typesupport_fastrtps_cpp.hpp  mother_state__rosidl_typesupport_introspection_c.h  mother_state__type_support.h
install/swarm_control/local/lib/python3.10/dist-packages/swarm_control-0.0.0-py3.10.egg-info/: SOURCES.txt
install/swarm_control/share/swarm_control/: local_setup.sh  package.ps1  package.sh
install/swarm_control/share/swarm_control/cmake/: ament_cmake_export_dependencies-extras.cmake  export_swarm_control__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  swarm_control__rosidl_typesupport_introspection_cExport-noconfig.cmake  swarm_control__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/swarm_control/share/swarm_control/msg/: MotherState.idl  MotherState.msg
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/integrated_drone_mapping/share/integrated_drone_mapping/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
src/install/integrated_drone_mapping/share/integrated_drone_mapping/cmake/: integrated_drone_mappingConfig.cmake
src/install/mapping/lib/mapping/: gcopter_trajectory_planner  integrated_drone_mapping_node  sfc_gen
src/install/mapping/share/ament_index/resource_index/package_run_dependencies/: mapping
src/install/mapping/share/mapping/: local_setup.sh  package.ps1  package.sh
src/install/mine_mapping/include/mine_mapping/: map_generator.hpp
src/install/mine_mapping/share/ament_index/resource_index/package_run_dependencies/: mine_mapping
src/install/mine_mapping/share/ament_index/resource_index/parent_prefix_path/: mine_mapping
src/install/mine_mapping/share/mine_mapping/: package.dsv  package.ps1  package.sh
src/install/object_tracker/lib/object_tracker/: drone_control  tracker
src/install/object_tracker/share/object_tracker/: package.sh
src/install/object_tracking_cpp/share/object_tracking_cpp/: local_setup.dsv  package.dsv  package.ps1  package.sh
src/install/object_tracking_cpp/share/object_tracking_cpp/cmake/: object_tracking_cppConfig.cmake
src/install/px4_msgs/share/px4_msgs/: package.sh
src/install/swarm_control/include/swarm_control/swarm_control/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
src/install/swarm_control/include/swarm_control/swarm_control/msg/detail/: mother_state__rosidl_typesupport_introspection_cpp.hpp  mother_state__struct.hpp  mother_state__type_support.cpp
src/install/swarm_control/local/lib/python3.10/dist-packages/swarm_control/msg/: _mother_state.py
src/install/swarm_control/share/ament_index/resource_index/rosidl_interfaces/: swarm_control
src/install/swarm_control/share/swarm_control/: local_setup.sh  package.dsv  package.sh
src/install/swarm_control/share/swarm_control/cmake/: ament_cmake_export_libraries-extras.cmake  export_swarm_control__rosidl_generator_cExport-noconfig.cmake  export_swarm_control__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  swarm_controlConfig.cmake
src/log/: latest_build
src/mapping/: CMakeLists.txt  package.xml  setup.py
src/mapping/src/: corridor_gen_correct.cpp  final_hstar.hpp  gcopter.hpp  integrated_drone_mapping_node.cpp  linear_eq.hpp  planner.cpp  quickhull2.hpp
src/mine_detection/: package.xml  setup.cfg  setup.py
src/mine_mapping/: CMakeLists.txt
src/mine_mapping/src/: map_generator.cpp  mine_map_node.cpp
src/object_tracker/: setup.py
src/object_tracker/object_tracker/: process_frame.py  tracker.py
src/object_tracking_cpp/: CMakeLists.txt
src/object_tracking_cpp/src/: follower1.cpp  follower2.cpp  follower3.cpp  mother_yaw.cpp  mothernode.cpp
src/swarm_control/: CMakeLists.txt
